--- a/tmpl/book/view.html
+++ b/tmpl/book/view.html
@@ -1,18 +1,18 @@
 <table>
 <tr>
- <th scope="row">Title:</th>
+ <th scope="row">Title</th>
  <td>{{.Title}}</td>
 </tr>
 <tr>
- <th scope="row">ISBN:</th>
+ <th scope="row">ISBN</th>
  <td>{{.ISBN}}</td>
 </tr>
 <tr>
- <th scope="row">Library:</th>
+ <th scope="row">Library</th>
  <td>{{.Library}}</td>
 </tr>
 <tr>
- <th scope="row">Requests:</th>
+ <th scope="row">Requests</th>
  <td>{{.ReqCount}}</td>
 </tr>
 </table>
