Introduced find.html template Introduced findHandler and relevant code in main Introduced searchHandler and relevant code in main Introduced makeCatalogue from slice of pointers to books. Refactored loadCatalogue to call makeCatalogue Introduced maps to Catalogue to "represent" indexing along different columns e.g. Title or ISBN. It is likely that using maps to search in a catalogue for title and ISBN will be changed because at the moment the maps are from strings to slices of pointers to books. If they were maps of strings to bool then I could more easily combine tests to see if we even need to search a Catalogue's books without expending too much time or space. There is still some major refactoring to do before I consider that bottleneck, right now I'm just trying to create a fully functional toy.

--- a/tmpl/viewBook.html
+++ b/tmpl/viewBook.html
@@ -9,10 +9,10 @@
 </tr>
 <tr>
  <th scope="row">Library</th>
- <td>{{.Library}}</td>
+ <td>{{.Lib}}</td>
 </tr>
 <tr>
  <th scope="row">Requests</th>
- <td>{{.ReqCount}}</td>
+ <td>{{.Reqs}}</td>
 </tr>
 </table>
