--- a/tmpl/editBook.html
+++ b/tmpl/editBook.html
@@ -2,5 +2,5 @@
 <h2>UIN {{.UIN}}</h2>
 
 <form action="/save" method="POST">
-<div><input type="text" name="title" placeholder={{printf "%s" .Title}} /></div>
+<div><input type="text" name="title" placeholder={{.Title}} /></div>
 <div><input type="submit" value="Save" /></div>
